<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/frag_about_icon"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_weight="159.25"
            android:contentDescription="@string/desc_list_item_icon"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/frag_about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/frag_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/app_dec"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>