<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/frag_about_icon"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_weight="12.25"
                android:contentDescription="@string/desc_list_item_icon"
                android:src="@drawable/ic_developer" />

            <TextView
                android:id="@+id/frag_about_text"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/developer"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/frag_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/developer_dec"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag_help5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/call"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/frag_help_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_list_item_icon"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/frag_help_text"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp" 
                android:text="@string/mobile_phone"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/frag_help2_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_list_item_icon"
                android:src="@drawable/ic_skype" />

            <TextView
                android:id="@+id/frag_help2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/skype_account"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/frag_help3_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_list_item_icon"
                android:src="@drawable/ic_fb" />

            <TextView
                android:id="@+id/frag_help3_text"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/facebook_account"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/frag_help4_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_list_item_icon"
                android:src="@drawable/ic_gmail" />

            <TextView
                android:id="@+id/frag_help4_text"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/gmail_account"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

</ScrollView> 